tests/baselines/reference/interfaceWithImplements1.errors.txt
tests/cases/compiler/interfaceWithImplements1.ts(3,16): error TS1005: '{' expected.
tests/cases/compiler/interfaceWithImplements1.ts(3,27): error TS1005: ';' expected.
tests/cases/compiler/interfaceWithImplements1.ts(3,32): error TS1005: ';' expected.
tests/cases/compiler/interfaceWithImplements1.ts(3,16): error TS2304: Cannot find name 'implements'.
tests/cases/compiler/interfaceWithImplements1.ts(3,27): error TS2304: Cannot find name 'IFoo'.


==== tests/cases/compiler/interfaceWithImplements1.ts (5 errors) ====
    interface IFoo { }
    
    interface IBar implements IFoo {
                   ~~~~~~~~~~
!!! error TS1005: '{' expected.
                              ~~~~
!!! error TS1005: ';' expected.
                                   ~
!!! error TS1005: ';' expected.
                   ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
                              ~~~~
!!! error TS2304: Cannot find name 'IFoo'.
    }